--- a/UIScrollView_KeyBoard/Base.lproj/Main.storyboard
+++ b/UIScrollView_KeyBoard/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UIScrollView_KeyBoard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,46 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DLD-mb-mXA">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b5k-oW-hL3">
+                                        <rect key="frame" x="15" y="615" width="346" height="30"/>
+                                        <color key="backgroundColor" red="0.64401981720000001" green="0.67501509189999997" blue="0.6344913767" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="ad3-DZ-mLd"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="b5k-oW-hL3" firstAttribute="top" secondItem="DLD-mb-mXA" secondAttribute="top" constant="615" id="38M-Wy-2bH"/>
+                                    <constraint firstItem="b5k-oW-hL3" firstAttribute="leading" secondItem="DLD-mb-mXA" secondAttribute="leading" constant="15" id="KpI-Um-GE4"/>
+                                    <constraint firstAttribute="trailing" secondItem="b5k-oW-hL3" secondAttribute="trailing" constant="15" id="gjq-Jx-S7p"/>
+                                    <constraint firstAttribute="bottom" secondItem="b5k-oW-hL3" secondAttribute="bottom" constant="20" id="rWc-WL-z8Z"/>
+                                    <constraint firstItem="b5k-oW-hL3" firstAttribute="centerX" secondItem="DLD-mb-mXA" secondAttribute="centerX" id="vLg-wR-yRS"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DLD-mb-mXA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="LX9-7D-OEq"/>
+                            <constraint firstItem="DLD-mb-mXA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Omr-TJ-eve"/>
+                            <constraint firstAttribute="trailing" secondItem="DLD-mb-mXA" secondAttribute="trailing" id="akc-wN-Fnh"/>
+                            <constraint firstItem="DLD-mb-mXA" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="n1m-ee-iQZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activeTextField" destination="b5k-oW-hL3" id="IcE-TJ-fb5"/>
+                        <outlet property="scrollView" destination="DLD-mb-mXA" id="IR1-JJ-uTY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
